player comparison endpoint added
